--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "app with react and node",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
@@ -26,10 +27,15 @@
   "dependencies": {
     "@hot-loader/react-dom": "16.13.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "express-jwt": "^8.4.1",
     "helmet": "^7.0.0",
-    "mongodb": "3.5.5",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongodb": "^3.5.5",
+    "mongoose": "^7.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hot-loader": "4.12.20"
